--- a/index.HTML
+++ b/index.HTML
@@ -39,7 +39,7 @@
         </div>
     <div class="container">
         <div class="cover">
-                <img src="images/background 4 checkers.jpg">
+                <img src="background 4 checkers.jpg">
                 <div class="middle">
                     <div class="text">Explore Women's</div>
                   </div>
