--- a/index.HTML
+++ b/index.HTML
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-    <Div class="boxl">
+    <nav class="boxl">
         <ul>
             <li><a href="">USD</a>   <i  class="fa fa-angle-down" aria-hidden="true"></i></li>
             <li><a href="">ENGLISH</a>  <i  class="fa fa-angle-down" aria-hidden="true"></i></li>
             <li><a href="">ACCOUNT</a>  <i  class="fa fa-angle-down" aria-hidden="true"></i></li>
         </ul>
         <h5>free shipping on orders above $50 </h5>
-    </Div>
+    </nav>
     <div class="subbox">
         <ol>
             <li><a href="">Home</a></li>
